--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,18 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.5.0
+Date: 2020.01.22
+  1. Fixes:
+    - Beacons, pipes, roboports, should work with 0.18 properly
+
+---------------------------------------------------------------------------------------------------
+Version: 0.4.1
+Date: 2020.01.22
+  1. Updated to 0.18:
+    - including Default 0.18 map tile preset
+  2. Fixes:
+    - "Dark Side of the Moon" now works properly
+    - "None" works properly
+---------------------------------------------------------------------------------------------------
 Version: 0.3.0
 Date: 2019.12.xx
   1. Two new entity presets:
@@ -9,7 +23,7 @@ Date: 2019.12.xx
   3. Tweaked resource colors for tile presets:
     - Stone more visible on Winter Wonderland
     - Coal visible on Black
-  4. Added fancy trees option
+  4. Added fancy trees option:
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.0
 Date: 2019.12.13
