--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.7.0
+Date: 2020.02.22
+  1. New:
+    - Tabs in map legend: Entities and Paths, resources, trees, tiles
+  2. Fixes:
+    - Locale
+---------------------------------------------------------------------------------------------------
 Version: 0.6.0
 Date: 2020.02.05
   1. New:
