--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.7.1
+Date: 2020.02.22
+  1. Fixes:
+    - Locale bug in legend
+---------------------------------------------------------------------------------------------------
 Version: 0.7.0
 Date: 2020.02.22
   1. New:
