--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.7.2
+Date: 2020.02.25
+  1. Fixes:
+    - Crash related to saving while Map Legend was open, and changing a preset at the same time
+---------------------------------------------------------------------------------------------------
 Version: 0.7.1
-Date: 2020.02.22
+Date: 2020.02.24
   1. Fixes:
     - Locale bug in legend
 ---------------------------------------------------------------------------------------------------
