--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.7.3
+Date: 2020.02.26
+  1. Fixes:
+    - Crash related to adding mod to save that did not have the mod previously
+---------------------------------------------------------------------------------------------------
 Version: 0.7.2
 Date: 2020.02.25
   1. Fixes:
