--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.7.4
+Date: 2020.03.21
+  1. Fixes:
+    - Error relating to loading new saves with the mod
+---------------------------------------------------------------------------------------------------
 Version: 0.7.3
 Date: 2020.02.26
   1. Fixes:
