--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.7.6
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 0.7.4
 Date: 2020.03.21
   1. Fixes:
